--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="1230, initial-scale=1">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
-	<link rel="stylesheet" href="bower/normalize­css/normalize.css">
+	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Project</title>
@@ -151,6 +151,6 @@
 		</div>
 	</div>
 </footer>
-<script src="bower/jquery/jquery.js"></script>
+<script src="bower_components/jquery/jquery.js"></script>
 </body>
 </html>
