--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 	<title>Обо мне</title>
+	<script src="js/venfor/modernizr.js"></script>
 	 <!--[if IE]>
 	<link rel="stylesheet" href="css/stylesheetie.css">	
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
