--- a/app/my_work.html
+++ b/app/my_work.html
@@ -4,20 +4,27 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="1230, initial-scale=1">
-	<meta  name="description" content="Здесь представлены мои работы">
+	<title>Мои работы</title>	
+	<meta name="description" content="Здесь представлены мои работы">
 	<meta name="keywords" content="Frontend разработчик">
+
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/portfolio.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-	<title>Мои работы</title>
+
 	<script src="js/venfor/modernizr.js"></script>
 	<!--[if IE]>
-	<link rel="stylesheet" href="css/stylesheetie.css">
+    <link rel="stylesheet" href="css/forie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 </head>
 <body>
+<!--[if lt IE 8]>
+ <p class="browsehappy">Ваш браузер <strong>устарел</strong>.
+Пожалуйста<a href="http://browsehappy.com/">обновите</a> его.</p>
+ <![endif]-->
 <div class="wrapper">
 	<header class="header clearfix">
 		<div class="header_container clearfix">
@@ -99,9 +106,9 @@
 			</section>			
 		</div>
 	</main>
-	<div class="empty"></div>
+	<div class="empty clearfix"></div>
 </div>
-<footer class="footer  clearfix">
+<footer class="footer clearfix">
 	<div class="footer_container">
 		<div class="icon enter">
 			<a href="#" class="enter_text" alt="">
