--- a/app/ie.html
+++ b/app/ie.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/ie/forie.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 
 	<script src="js/venfor/modernizr.js"></script>
@@ -26,31 +27,31 @@
  <![endif]-->
 <div class="wrapper">
 	<header class="header clearfix">
-		<div class="header_container">
+		<div class="header_container clearfix">
 			<a href="index.html" class="logo">
-				<img class="logo_img" src="images/logo.png" alt="lgweb">
-				<span class="logo_text">
+				<img class="logo-img" src="images/logo.png" alt="lgweb">
+				<span class="logo-text">
 					Leisan Gilfanova начинающий front-end разработчик.
 				</span>
 			</a>
 			<ul class="socials clearfix">
-				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
+				<li class="socials-item">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon-fb" alt="">
 						facebook
 					</a>
 				</li>			
-				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
+				<li class="socials-item">
+					<a href="http://vk.com/id121191631" class="icon icon-vk" alt="">
 						vkontakte
 					</a>
 				</li>
-				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="" target="_blank">
+				<li class="socials-item">
+					<a href="#" class="icon icon-tw" alt="">
 						twitter
 					</a>
 				</li>
-				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
+				<li class="socials-item">
+					<a href="https://github.com/Allarepossible" class="icon icon-git" alt="">
 						github
 					</a>
 				</li>
@@ -59,7 +60,7 @@
 	</header>
 	<main class="content clearfix">
 		<aside class="sidebar clearfix">
-			<nav class="nav clearfix">
+			<nav class="nav">
 				<ul>
 					<li class="active"><a href="/index.html">Обо мне</a></li>
 					<li><a href="/my_work.html">Мои Работы</a></li>
@@ -67,20 +68,20 @@
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
-				<div class="contacts_title">Контакты</div>
-				<ul class="contacts_list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
+				<div class="contacts-title">Контакты</div>
+				<ul class="contacts-list">
+					<li><a href="mailto:lisynok@list.ru" class="gmail-cont">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel-cont">+7 (916) 814-10-51</a></li>
+					<li><a href="skype:lisynok_93" class="skype-cont">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
-		<div class="content_area clearfix">
+		<div class="content-area clearfix">
 			<section class="information clearfix">
 				<div class="mainLine">Основная информация</div>
-				<div class="main_information">
+				<div class="main-information">
 					<div class="photo">
-						<div class="inner_photo">
+						<div class="inner-photo">
 							<img src="images/photo.png" height="132px">
 						</div>
 					</div>
@@ -103,50 +104,8 @@
 					</div>
 				</div>
 			</section>
-			<section class="information  clearfix">	
-				<div class="mainLine  clearfix">Опыт работы</div>	
-				<div class="workExp">
-					<ul>
-						<li class="org">
-							<div class="work">
-								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="Data">Ноябрь 2014 - настоящее время</span>
-							</div>
-						</li>
-						<li class="org">
-							<div class="work">	
-								<span class="bold">"amoCRM" - project менеджер</span><span class="Data"> Июнь 2015 - Ноябрь 2015</span>
-							</div>
-						</li>
-						<li class="org">
-							<div class="work">	
-								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="Data"> Январь 2016 - настроящее время</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>
-			<section class="information  clearfix">	
-				<div class="mainLine  clearfix">Образование</div>
-				<div class="Education">	
-					<ul>
-						<li class="org">
-							<div class="school">
-								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="Data">2000 - 2011</span>
-							</div>
-						</li>
-						<li class="org">
-							<div class="vus">	
-								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="Data"> Сентябрь 2011 - по настоящее время</span>
-							</div>
-						</li>
-						<li class="org">
-							<div class="kursy">	
-								<span class="bold">Курсы Loftschool.ru</span><span class="Data"> Январь 2016 - по настоящее время</span>
-							</div>
-						</li>
-					</ul>
-				</div>
-			</section>			
+			<div id="myAwesomeElement"></div>
+					
 		</div>
 	</main>
 	<div class="empty"></div>
