--- a/app/my_work.html
+++ b/app/my_work.html
@@ -29,29 +29,29 @@
 	<header class="header clearfix">
 		<div class="header_container clearfix">
 			<a href="index.html" class="logo">
-				<img class="logo-img" src="images/logo.png" alt="lgweb">
-				<span class="logo-text">
+				<img class="logo_img" src="images/logo.png" alt="lgweb">
+				<span class="logo_text">
 					Leisan Gilfanova начинающий front-end разработчик.
 				</span>
 			</a>
 			<ul class="socials clearfix">
-				<li class="socials-item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon-fb" alt="">
+				<li class="socials_item">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="">
 						facebook
 					</a>
 				</li>			
-				<li class="socials-item">
-					<a href="http://vk.com/id121191631" class="icon icon-vk" alt="">
+				<li class="socials_item">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="">
 						vkontakte
 					</a>
 				</li>
-				<li class="socials-item">
-					<a href="#" class="icon icon-tw" alt="">
+				<li class="socials_item">
+					<a href="#" class="icon icon_tw" alt="">
 						twitter
 					</a>
 				</li>
-				<li class="socials-item">
-					<a href="https://github.com/Allarepossible" class="icon icon-git" alt="">
+				<li class="socials_item">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="">
 						github
 					</a>
 				</li>
@@ -68,19 +68,19 @@
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
-				<div class="contacts-title">Контакты</div>
-				<ul class="contacts-list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail-cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel-cont">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype-cont">Lisynok_93</a></li>
+				<div class="contacts_title">Контакты</div>
+				<ul class="contacts_list">
+					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 8141051</a></li>
+					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
-		<div class="content-area clearfix">
+		<div class="content_area clearfix">
 			<section class="information clearfix">
 				<div class="mainLine">Мои работы</div>
 				<div class="projecs">
-					<ul class="project-list">
+					<ul class="project_list">
 						<li class="project">
 							<a href="http://lgweb.ru/" target="_blank"><div class="photo_project"><img src="images/lgweb.jpg" alt=""></div>
 							<div class="name_project">lgweb.ru</div></a>
