--- a/app/feedback.html
+++ b/app/feedback.html
@@ -31,29 +31,29 @@
 	<header class="header clearfix">
 		<div class="header_container clearfix">
 			<a href="index.html" class="logo">
-				<img class="logo-img" src="images/logo.png" alt="lgweb">
-				<span class="logo-text">
+				<img class="logo_img" src="images/logo.png" alt="lgweb">
+				<span class="logo_text">
 					Leisan Gilfanova начинающий front-end разработчик.
 				</span>
 			</a>
 			<ul class="socials clearfix">
-				<li class="socials-item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon-fb" alt="">
+				<li class="socials_item">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
 						facebook
 					</a>
 				</li>			
-				<li class="socials-item">
-					<a href="http://vk.com/id121191631" class="icon icon-vk" alt="">
+				<li class="socials_item">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
 						vkontakte
 					</a>
 				</li>
-				<li class="socials-item">
-					<a href="#" class="icon icon-tw" alt="">
+				<li class="socials_item">
+					<a href="#" class="icon icon_tw" alt="" target="_blank">
 						twitter
 					</a>
 				</li>
-				<li class="socials-item">
-					<a href="https://github.com/Allarepossible" class="icon icon-git" alt="">
+				<li class="socials_item">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
 						github
 					</a>
 				</li>
@@ -70,32 +70,32 @@
 				</ul>
 			</nav>		
 			<div class="contacts clearfix">
-				<div class="contacts-title">Контакты</div>
-				<ul class="contacts-list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail-cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel-cont">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype-cont">Lisynok_93</a></li>
+				<div class="contacts_title">Контакты</div>
+				<ul class="contacts_list">
+					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 814-10-51</a></li>
+					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
-		<div class="content-area clearfix">
+		<div class="content_area clearfix">
 			<section class="information">
 				<div class="mainLine  clearfix">У вас интересный проект? Напишите мне</div>
 				<div class="contact_form">
 					<form action="#" method="get" class="form">
-						<div class="inputs"><label>Имя</label>
-							<input type="text" name="name" placeholder="Как к Вам обращаться">
+						<div class="inputs"><label for="input_name">Имя</label>
+							<input id="input_name" type="text" name="name" placeholder="Как к Вам обращаться">
 						</div>
-						<div class="inputs"><label>Email</label>
-							<input type="email" name="email" placeholder="Куда мне писать">
+						<div class="inputs"><label for="input_email">Email</label>
+							<input id="input_email" type="email" name="email" placeholder="Куда мне писать">
 						</div>
 						
-						<div class="input_message"><label>Сообщение</label>
-							<textarea name="message" cols="40" rows="6"   placeholder="Кратко в чем суть" ></textarea>
+						<div class="input_message"><label for="input_message">Сообщение</label>
+							<textarea id="input_message" name="message" cols="40" rows="6"   placeholder="Кратко в чем суть" ></textarea>
 						</div>			
-						<label>Введите код, указанный на картинке</label>
+						<label for="input_captcha">Введите код, указанный на картинке</label>
 						<div class="antispam"></div>
-						<div class="captcha"><input type="captcha" name="сaptcha" placeholder="Введите код"></div>
+						<div class="captcha"><input id="input_captcha" type="captcha" name="сaptcha" placeholder="Введите код"></div>
 						
 						<div class="buttons">
 							<button type="reset">Очистить</button>
