fix warning and errors in css

--- a/app/feedback.html
+++ b/app/feedback.html
@@ -64,17 +64,17 @@
 		<aside class="sidebar clearfix">
 			<nav class="nav">
 				<ul>
-					<li><a href="/index.html">Обо мне</a></li>
-					<li><a href="/my_work.html">Мои Работы</a></li>
-					<li class="active"><a href="/feedback.html">Обратная связь</a></li>
+					<li class="navigation"><a href="/index.html">Обо мне</a></li>
+					<li class="navigation"><a href="/my_work.html">Мои Работы</a></li>
+					<li class="navigation active"><a href="/feedback.html">Обратная связь</a></li>
 				</ul>
 			</nav>		
 			<div class="contacts clearfix">
 				<div class="contacts_title">Контакты</div>
 				<ul class="contacts_list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
+					<li><a href="mailto:lisynok@list.ru" class="gmail_cont icon">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel_cont icon">+7 (916) 814-10-51</a></li>
+					<li><a href="skype:lisynok_93" class="skype_cont icon">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
@@ -108,14 +108,14 @@
 	</main>
 	<div class="empty"></div>
 </div>
-<footer class="footer">
+<footer class="footer clearfix">
 	<div class="footer_container">
 		<div class="icon enter">
 			<a href="#" class="enter_text" alt="">
 				Вход
 			</a>
 		</div>
-		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его
+		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
 	</div>
 </footer>
