--- a/app/index.html
+++ b/app/index.html
@@ -61,17 +61,17 @@
 		<aside class="sidebar clearfix">
 			<nav class="nav clearfix">
 				<ul>
-					<li class="active"><a href="/index.html">Обо мне</a></li>
-					<li><a href="/my_work.html">Мои Работы</a></li>
-					<li><a href="/feedback.html">Обратная связь</a></li>
+					<li class="navigation active"><a href="/index.html">Обо мне</a></li>
+					<li class="navigation"><a href="/my_work.html">Мои Работы</a></li>
+					<li class="navigation"><a href="/feedback.html">Обратная связь</a></li>
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
 				<div class="contacts_title">Контакты</div>
 				<ul class="contacts_list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 814-10-51</a></li>
-					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
+					<li><a href="mailto:lisynok@list.ru" class="gmail_cont icon">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel_cont icon">+7 (916) 814-10-51</a></li>
+					<li><a href="skype:lisynok_93" class="skype_cont icon">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
@@ -81,7 +81,7 @@
 				<div class="main_information">
 					<div class="photo">
 						<div class="inner_photo">
-							<img src="images/photo.png" height="132px">
+							<img src="images/photo.png">
 						</div>
 					</div>
 					<div class="info">
@@ -105,20 +105,23 @@
 			</section>
 			<section class="information  clearfix">	
 				<div class="mainLine  clearfix">Опыт работы</div>	
-				<div class="workExp">
+				<div class="Education">
 					<ul>
 						<li class="org">
+						<i class="icon icon_work"></i>
 							<div class="work">
 								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="Data">Ноябрь 2014 - настоящее время</span>
 							</div>
 						</li>
 						<li class="org">
-							<div class="work">	
+						<i class="icon icon_work"></i>
+							<div class="work">
 								<span class="bold">"amoCRM" - project менеджер</span><span class="Data"> Июнь 2015 - Ноябрь 2015</span>
 							</div>
 						</li>
 						<li class="org">
-							<div class="work">	
+						<i class="icon icon_work"></i>
+							<div class="work">		
 								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="Data"> Январь 2016 - настроящее время</span>
 							</div>
 						</li>
@@ -130,17 +133,20 @@
 				<div class="Education">	
 					<ul>
 						<li class="org">
-							<div class="school">
+						<i class="icon icon_school"></i>
+							<div class="work">
 								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="Data">2000 - 2011</span>
 							</div>
 						</li>
 						<li class="org">
-							<div class="vus">	
+						<i class="icon icon_vus"></i>
+							<div class="work">	
 								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="Data"> Сентябрь 2011 - по настоящее время</span>
 							</div>
 						</li>
 						<li class="org">
-							<div class="kursy">	
+						<i class="icon icon_course"></i>
+							<div class="work">
 								<span class="bold">Курсы Loftschool.ru</span><span class="Data"> Январь 2016 - по настоящее время</span>
 							</div>
 						</li>
@@ -158,7 +164,7 @@
 				Вход
 			</a>
 		</div>
-		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его
+		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
 	</div>
 </footer>
