--- a/app/my_work.html
+++ b/app/my_work.html
@@ -62,17 +62,17 @@
 		<aside class="sidebar clearfix">
 			<nav class="nav">
 				<ul>
-					<li><a href="/index.html">Обо мне</a></li>
-					<li class="active"><a href="/my_work.html">Мои Работы</a></li>
-					<li><a href="/feedback.html">Обратная связь</a></li>
+					<li class="navigation"><a href="/index.html">Обо мне</a></li>
+					<li class="navigation active"><a href="/my_work.html">Мои Работы</a></li>
+					<li class="navigation"><a href="/feedback.html">Обратная связь</a></li>
 				</ul>
 			</nav>
 			<div class="contacts clearfix">
 				<div class="contacts_title">Контакты</div>
 				<ul class="contacts_list">
-					<li><a href="mailto:lisynok@list.ru" class="gmail_cont">lisynok@list.ru</a></li>
-					<li><a href="tel:+79168141051" class="tel_cont">+7 (916) 8141051</a></li>
-					<li><a href="skype:lisynok_93" class="skype_cont">Lisynok_93</a></li>
+					<li><a href="mailto:lisynok@list.ru" class="gmail_cont icon">lisynok@list.ru</a></li>
+					<li><a href="tel:+79168141051" class="tel_cont icon">+7 (916) 8141051</a></li>
+					<li><a href="skype:lisynok_93" class="skype_cont icon">Lisynok_93</a></li>
 				</ul>
 			</div>
 		</aside>
@@ -115,7 +115,7 @@
 				Вход
 			</a>
 		</div>
-		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его
+		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
 	</div>
 </footer>
