all icons in sprite and good soc icons

--- a/app/feedback.html
+++ b/app/feedback.html
@@ -18,9 +18,7 @@
 	 <!--[if IE]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <link rel="stylesheet" href="css/forie.css">
-
 	<![endif]-->
-	
 </head>
 <body>
 <!--[if lt IE 8]>
@@ -89,14 +87,12 @@
 						<div class="inputs"><label for="input_email">Email</label>
 							<input id="input_email" type="email" name="email" placeholder="Куда мне писать">
 						</div>
-						
 						<div class="input_message"><label for="input_message">Сообщение</label>
 							<textarea id="input_message" name="message" cols="40" rows="6"   placeholder="Кратко в чем суть" ></textarea>
 						</div>			
 						<label for="input_captcha">Введите код, указанный на картинке</label>
 						<div class="antispam"></div>
 						<div class="captcha"><input id="input_captcha" type="captcha" name="сaptcha" placeholder="Введите код"></div>
-						
 						<div class="buttons">
 							<button type="reset">Очистить</button>
 							<button type="submit">Отправить</button>		
@@ -111,9 +107,7 @@
 <footer class="footer clearfix">
 	<div class="footer_container">
 		<div class="icon enter">
-			<a href="#" class="enter_text" alt="">
-				Вход
-			</a>
+			<a href="#" class="enter_text" alt="">Вход</a>
 		</div>
 		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
