--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,6 @@
 	<link rel="stylesheet" href="css/stylesheet.css">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
-
 	<script src="js/venfor/modernizr.js"></script>
 	 <!--[if IE]>
     <link rel="stylesheet" href="css/forie.css">
@@ -91,35 +90,35 @@
 						<p><span class="bold">Моя специализация:</span> FRONTEND разработчик</span></p>
 						<div class="navyki">Ключевые навыки:</div>
 						<ul class="skills">
-							<li class="skill">Html</li>						
-							<li class="skill">Css</li>
-							<li class="skill">Javascript</li>
-							<li class="skill">Git</li>
-							<li class="skill">Gulp</li>							
-							<li class="skill">Php</li>
-							<li class="skill">Angular</li>
-							<li class="skill">Xml</li>
+							<li class="skill icon">Html</li>						
+							<li class="skill icon">Css</li>
+							<li class="skill icon">Javascript</li>
+							<li class="skill icon">Git</li>
+							<li class="skill icon">Gulp</li>							
+							<li class="skill icon">Php</li>
+							<li class="skill icon">Angular</li>
+							<li class="skill icon">Xml</li>
 						</ul>							
 					</div>
 				</div>
 			</section>
-			<section class="information  clearfix">	
-				<div class="mainLine  clearfix">Опыт работы</div>	
+			<section class="information clearfix">	
+				<div class="mainLine pad clearfix">Опыт работы</div>	
 				<div class="Education">
 					<ul>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">
 								<span class="bold">Торговый дом "Ledrus" - контент менеджер</span><span class="Data">Ноябрь 2014 - настоящее время</span>
 							</div>
 						</li>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">
 								<span class="bold">"amoCRM" - project менеджер</span><span class="Data"> Июнь 2015 - Ноябрь 2015</span>
 							</div>
 						</li>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_work"></i>
 							<div class="work">		
 								<span class="bold">Веб-студия "Diaweb" - помощник дизайнера</span><span class="Data"> Январь 2016 - настроящее время</span>
@@ -132,19 +131,19 @@
 				<div class="mainLine  clearfix">Образование</div>
 				<div class="Education">	
 					<ul>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_school"></i>
 							<div class="work">
 								<span class="bold">Полное среднее. Средняя общеобразовательная школа.</span><span class="Data">2000 - 2011</span>
 							</div>
 						</li>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_vus"></i>
 							<div class="work">	
 								<span class="bold">МГУ им. М. В. Ломоносова - физический факультет</span><span class="Data"> Сентябрь 2011 - по настоящее время</span>
 							</div>
 						</li>
-						<li class="org">
+						<li class="org icon">
 						<i class="icon icon_course"></i>
 							<div class="work">
 								<span class="bold">Курсы Loftschool.ru</span><span class="Data"> Январь 2016 - по настоящее время</span>
@@ -160,9 +159,7 @@
 <footer class="footer clearfix">
 	<div class="footer_container">
 		<div class="icon enter">
-			<a href="#" class="enter_text" alt="">
-				Вход
-			</a>
+			<a href="#" class="enter_text" alt="">Вход</a>
 		</div>
 		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
