--- a/app/my_work.html
+++ b/app/my_work.html
@@ -14,7 +14,6 @@
 	<link rel="stylesheet" href="css/portfolio.css">
 	<link rel="icon" type="image/x-icon" href="images/icon.ico">
 
-	<script src="js/venfor/modernizr.js"></script>
 	<!--[if IE]>
     <link rel="stylesheet" href="css/forie.css">
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -36,22 +35,22 @@
 			</a>
 			<ul class="socials clearfix">
 				<li class="socials_item">
-					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="">
+					<a href="https://www.facebook.com/allarepossible" class="icon icon_fb" alt="" target="_blank">
 						facebook
 					</a>
 				</li>			
 				<li class="socials_item">
-					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="">
+					<a href="http://vk.com/id121191631" class="icon icon_vk" alt="" target="_blank">
 						vkontakte
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="#" class="icon icon_tw" alt="">
+					<a href="#" class="icon icon_tw" alt="" target="_blank">
 						twitter
 					</a>
 				</li>
 				<li class="socials_item">
-					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="">
+					<a href="https://github.com/Allarepossible" class="icon icon_git" alt="" target="_blank">
 						github
 					</a>
 				</li>
@@ -97,7 +96,7 @@
 							<div class="description_project">Сайт визитка компании Plasten по продаже термопласт-автоматов.</div>
 						</li>
 						<li class="project">
-							<a href=""><div class="add_project">
+							<a href=""><div class="add_project icon">
 								<div class="add_project_text">Добавить проект</div>
 							</div></a>
 						</li>
@@ -111,9 +110,7 @@
 <footer class="footer clearfix">
 	<div class="footer_container">
 		<div class="icon enter">
-			<a href="#" class="enter_text" alt="">
-				Вход
-			</a>
+			<a href="#" class="enter_text" alt="">Вход</a>
 		</div>
 		<div class="footer_text">© 2016. Это мой сайт, пожалуйста, не копируйте и не воруйте его!
 		</div>
