--- a/app/feedback.html
+++ b/app/feedback.html
@@ -81,10 +81,10 @@
 				<div class="mainLine  clearfix">У вас интересный проект? Напишите мне</div>
 				<div class="contact_form">
 					<form action="#" method="get" class="form">
-						<div class="inputs"><label for="input_name">Имя</label>
+						<div class="inputs left"><label for="input_name">Имя</label>
 							<input id="input_name" type="text" name="name" placeholder="Как к Вам обращаться">
 						</div>
-						<div class="inputs"><label for="input_email">Email</label>
+						<div class="inputs right"><label for="input_email">Email</label>
 							<input id="input_email" type="email" name="email" placeholder="Куда мне писать">
 						</div>
 						<div class="input_message"><label for="input_message">Сообщение</label>
